GFTS-509 Sign card: allow user to change their name spacing fix

--- a/client/scripts/popover/note/note-popover.sass
+++ b/client/scripts/popover/note/note-popover.sass
@@ -23,7 +23,7 @@
     +box-shadow(rgba(0, 0, 0, 0), 0, 0, 0)
 
   div.note
-    width: 100%te
+    width: 100%
     border: solid 1px rgba(255, 255, 255, 1)
     background-color: #fff
     padding: 10px
@@ -43,6 +43,9 @@
 
     textarea[disabled]
       text-decoration: line-through
+
+    #name-box
+      margin-bottom: 12px
 
   textarea
     width: 100%
